# laser_localization

./: .dockerignore  AGENTS.md  CMakeLists.txt  Dockerfile  package.xml  setup.py
agv_pose_refiner_py/: agv_pose_refiner_node.py  common.py  infrared.py  infrared_receiver.py  pose_solver.py  result_publisher.py  serial_receiver.py
config/: agv_pose_refiner.yaml  map_and_solver.yaml  sensors.yaml  topics.yaml
docker/: ros_entrypoint.sh
launch/: agv_pose_refiner.launch.py
resource/: agv_pose_refiner
scripts/: agv_pose_refiner_node
src/agv_pose_refiner/: package.xml  setup.cfg  setup.py
src/agv_pose_refiner/agv_pose_refiner/: agv_pose_refiner_node.py  common.py  pose_solver.py  result_publisher.py
src/agv_pose_refiner/config/: map_and_solver.yaml  sensors.yaml  topics.yaml
test/: __init__.py  _module_stubs.py  test_common.py  test_infrared.py  test_pose_solver.py  test_result_publisher.py  test_serial_receiver.py
