<?xml version="1.0"?>
<package format="3">
  <name>agv_pose_refiner</name>
  <version>0.1.0</version>
  <description>Core 6-beam and LiDAR coarse pose localization refiner for ROS 2 Humble.</description>

  <maintainer email="codex@example.com">OpenAI Codex</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
